--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/mpoc/nexus-grader-config-test-action#readme",
   "dependencies": {
     "ajv": "^7.1.1",
+    "better-ajv-errors": "^0.7.0",
     "js-yaml": "^4.0.0",
     "node-fetch": "^2.6.1"
   }
