--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/mpoc/nexus-grader-config-test-action#readme",
   "dependencies": {
+    "@actions/core": "^1.2.6",
     "ajv": "^7.1.1",
     "better-ajv-errors": "^0.7.0",
     "js-yaml": "^4.0.0",
